# forge-e2e-gnumeric

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.asimov/: project.yaml  roadmap.yaml
.claude/hooks/: pre-compact.sh  session-start.sh
src/: engine.rs  excel.rs  lib.rs  main.rs  runner.rs  types.rs
tests/edge/: e2e_math_edge_cases.yaml  edge_comparison.yaml  edge_enterprise_errors.yaml  edge_string_ops.yaml  edge_type_coercion.yaml
tests/functions/: advanced.yaml  aggregation.yaml  array.yaml  conditional.yaml  date.yaml  e2e_advanced_complete.yaml  e2e_aggregation_complete.yaml  e2e_array_complete.yaml  e2e_conditional_complete.yaml  e2e_date_complete.yaml  e2e_financial_complete.yaml  e2e_forge_complete.yaml  e2e_info_complete.yaml  e2e_logical_complete.yaml  e2e_lookup_complete.yaml  e2e_math_complete.yaml  e2e_math_extended.yaml  e2e_roundtrip_complete.yaml  e2e_statistical_complete.yaml  e2e_text_complete.yaml  e2e_trig_complete.yaml  financial.yaml  forge_native.yaml  information.yaml  logical.yaml  lookup.yaml  math.yaml  statistical.yaml  text.yaml  trigonometric.yaml
