[package]
name = "mollendorff-forge-e2e-gnumeric"
version = "1.0.0"
edition = "2021"
authors = ["Möllendorff Group Inc. <admin@mollendorff.ai>"]
description = "E2E validation of forge against Gnumeric (Excel-compatible functions)"
repository = "https://github.com/mollendorff-ai/forge-e2e-gnumeric"
homepage = "https://github.com/mollendorff-ai/forge"
documentation = "https://github.com/mollendorff-ai/forge-e2e-gnumeric#readme"
license = "MIT OR Apache-2.0"
keywords = ["forge", "e2e", "testing", "gnumeric", "excel"]
categories = ["development-tools::testing"]
readme = "README.md"
exclude = [
    ".git*",
    ".asimov/*",
    ".claude/*",
    "docs/*",
    "*.md",
    "!README.md",
]

[lib]
name = "forge_e2e_gnumeric"
path = "src/lib.rs"

[[bin]]
name = "forge-e2e-gnumeric"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"

# Temp files for XLSX/CSV
tempfile = "3.23"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CSV parsing
csv = "1.4"

# Excel reading/writing
calamine = "0.32"
rust_xlsxwriter = "0.92"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
option_if_let_else = "allow"
needless_continue = "allow"
redundant_closure_for_method_calls = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
